--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
 	<link href="http://fonts.googleapis.com/css?family=Lora:400,400italic|Open+Sans|Roboto|Source+Sans+Pro" rel="stylesheet" type="text/css">
 
+    <script src="https://use.fontawesome.com/d6026c81cc.js"></script>
+
     {% block headers %}
     {% endblock %}
 
