--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,21 @@
                 <img id="logoM" src="{{ static('assets/logo-m.png') }}" alt="MHacks 8 Logo - M">
                 <img id="logoText" src="{{ static('assets/logo-text.png') }}" alt="MHacks 8 Logo - Hacks 8">
             </div>
-            <div id="headerButtons">
-                <a href="mailto:hackathon@umich.edu" target="_blank">Email</a>
-                <a href="{{ url_for('mhacks-applyMentor') }}">Mentor</a>
-                <a href="{{ url_for('mhacks-apply') }}">Apply</a>
-            </div>
+{#            <div id="headerLinks">#}
+                <div id="headerButtons">
+                    <a href="mailto:hackathon@umich.edu" target="_blank">Email</a>
+                    <a href="{{ url_for('mhacks-applyMentor') }}">Mentor</a>
+                    <a href="{{ url_for('mhacks-apply') }}">Apply</a>
+                </div>
+                <div id="headerDropdown">
+                    <i id="dropdownTrigger" class="fa fa-bars fa-2x" aria-hidden="false"></i>
+                    <div id="dropdownContent" class="turquoise">
+                        <a href="mailto:hackathon@umich.edu" target="_blank">Email</a>
+                        <a href="{{ url_for('mhacks-applyMentor') }}">Mentor</a>
+                        <a href="{{ url_for('mhacks-apply') }}">Apply</a>
+                    </div>
+                </div>
+{#            </div>#}
         </div>
         <div class="grid">
             <div class="grid-item darkBlue " data-remove="2" data-expandable="0">
@@ -40,6 +50,7 @@
             </div>
             <div class="grid-item expand-small blue  " data-remove="0" data-expandable="1">
                 <div class="expand-icon"></div>
+                <!--i class="fa fa-plus-circle fa-pull-right" aria-hidden="false"></i-->
                 <div class="grid-item-content">
                     <div class="basic-info">
                         <h1>What is MHacks?</h1>
