--- a/templates/generic_form.html
+++ b/templates/generic_form.html
@@ -29,14 +29,21 @@
                         {% endfor %}
                     {% endblock %}
                     {% for field in form %}
-                        <div class="row ">
-                            <div class="col-lg-12 text-center ">
+                        {% if loop.first %}
+                            <div class="row">
+                        {% endif %}
+
+                            <div class="col-lg-{{ field.field.cols if field.field.cols else '12' }} text-center ">
                             <h4 class="input_word" {% if field.field.longest %}id="longest"{% endif %}>{{ field.label }}</h4>
                             {{ field.as_widget() }}
                             {% for error in form.errors[field.name] %}
                                 <p class="alert alert-danger">{{ error }}</p>
                             {% endfor %}
-                        </div>
+
+                        {% if field.field.end_row %}
+                            </div>
+                            <div class="row">
+                        {% endif %}
                     </div>
                     {% endfor %}
                 </div>
