--- a/templates/application.html
+++ b/templates/application.html
@@ -1,3 +1,6 @@
 {% extends 'generic_form.html' %}
 
+{# TODO: this is hacky as fuck we need to fix this #}
+{% block form_action %}" enctype="multipart/form-data{% endblock %}
+
 {% block form_title %}Apply{% endblock %}
