--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <!--canvas id="bgCanvas"></canvas-->
+    <canvas id="bgCanvas"></canvas>
     <div id="container">
         <div class="header turquoise">
             <div id="eventInfo">
