--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -46,7 +46,6 @@ body {
  	margin-left: auto;
 	margin-right: auto;
     border: 1px solid  rgba(0,0,0,0.33);
-    display: table;
     padding-bottom: 50px;
 }
 
@@ -121,8 +120,7 @@ html input:focus {
 }
 
 html input[type="radio"],
-html input[type="checkbox"] {
-}
+
 
 html button {
     color: #000000;
@@ -132,7 +130,6 @@ html button {
     transition: .4s;
     font-size:  16px;
 }
-
 
 /* Rows */
 
@@ -161,8 +158,8 @@ html button {
 }
 
 .drop-down-button{
-   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-     margin-left: auto;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    margin-left: auto;
     margin-right: auto;
     border: 1px solid  rgba(0,0,0,0.33);
     border-radius: 0px;
@@ -177,6 +174,51 @@ html button {
 	color:#000; 
 	opacity:.7;
 }
+.select_style 
+{   box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.05);
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid  rgba(0,0,0,0.33);
+    border-radius: 0px;
+    background-color: #fff;
+    max-width: 100%;
+    overflow: ellipsis;
+    min-width: 270px;
+}
 
+.select_style select
+{
+    -webkit-appearance: none;
+    appearance:none;
+    width:120%;
+    background:none;
+    background:transparent;
+    border:none;
+    outline:1px black;
+    cursor:pointer;
+    padding:7px 10px;
+    max-width: 100%; 
+    text-overflow: ellipsis;
+    min-width: 270px
+}
 
+.addMargin{
+    padding: 15px;
+}
+.label_apply {
+    font-weight: 200;
+    margin-right: 5px;
+    display: block;
+}
 
+.textfield{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.05), 0 3px 6px rgba(0,0,0,0.05);
+    border: 1px solid  #ccc;
+    width: 85%;
+    height: 100px !important ;
+    display: inline;
+}
+
+.subtitle {
+    margin-top: 30px;
+}
