--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
         {% endfor %}
     {% endfor %}
 {% endblock %}
-{% block submit_title %}Login{% endblock %}
+{% block submit_title %}LOGIN{% endblock %}
 {% block form_footer %}
     <p> Don't have an account? <br> Click <a href="{{ url_for('mhacks-register') }}">here</a> to create one!</p>
     <p><a href="{{ url_for('mhacks-reset_password') }}">Forgot password?</a></p>
