--- a/static/stylesheets/form.css
+++ b/static/stylesheets/form.css
@@ -14,18 +14,28 @@ body {
     font-size: 12pt;
 }
 
-.header-apply{
+ul {
+    list-style-type: none;
+}
+
+.header-form{
     height: 120px; 
 }
 
-.logo{
-    margin: 0px auto;
-    display: block;
+.title-form {
+    color: rgba(0, 169, 194, 1);
+}
+.title-form h3 {
+    font-size: 38px;
 }
 
-.container-apply {
+.body-form {
+    margin-top: 30px;
+}
+
+.container-form {
     width: 66%;
-    margin-top: 120px;
+    margin-top: 250px;
     -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     -moz-box-shadow:0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -33,6 +43,11 @@ body {
     margin-right: auto;
     border: 1px solid  rgba(0,0,0,0.33);
     padding-bottom: 50px;
+}
+
+.logo{
+    margin: 0px auto;
+    display: block;
 }
 
 /* INPUTS */
@@ -141,7 +156,7 @@ html button {
 }
 
 .submit-row {
-    margin-top: 20px;
+    margin-top: 35px;
     text-align: center;
 }
 
@@ -154,6 +169,12 @@ html button {
     background-color: #fff;
 }
 
-.full_width{
-    width: 100%;
+.label-apply {
+    font-weight: 200;
+    font-size: 25px;
+    margin-right: 7px;
+}
+
+.field-form input {
+    font-size: 25px;
 }
