First batch of github issues resolved Styling fixes, auto-scroll to opened tile, animation expansion fix

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -560,6 +560,15 @@ p {
     overflow: hidden;
 }
 
+.social-link {
+    transition: background-color 0.2s;
+}
+
+.grid-item:hover .social-link {
+    background-color: #FFE641;
+    transition: background-color 0.2s;
+}
+
 .flavor-image {
     width: 100%;
     min-height: 100%;
