--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -288,6 +288,11 @@ p {
     box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.35);
     padding: 20px;
     margin-bottom: 10px;
+
+    align-self: stretch;
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
 }
 
 .quote {
