dashboard button fix

--- a/static/stylesheets/form.css
+++ b/static/stylesheets/form.css
@@ -193,3 +193,27 @@ html button {
 .header-buttons{
     width: 30%;
 }
+
+.header button {
+    background-color: rgba(255,255,255,0.45);
+    box-shadow: 0px 2px 5px 0px #727272;
+
+    padding: 5px 10px;
+    width: 90px;
+    margin: 2px 0 2px 10px;
+
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 0.6px;
+
+    transition: all 0.2s;
+}
+
+.header button:hover {
+    background-color: #FFE641;
+    box-shadow: -3px 3px 40px rgba(32, 32, 32, 0.15);
+    color: rgba(37, 37, 37, 0.63);
+    cursor: pointer;
+    transition: all 0.2s;
+}
