Added MLH logo to main page, email links no longer open in new tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="grid-item darkBlue" data-remove="0" data-expandable="0">
-                <div class="grid-item-image social-link">
+                <div class="grid-item-image clickable-icon">
                     <a href="https://www.facebook.com/MHacksHackathon/" target="_blank"><img
                         src="{{ static('assets/fb-link.png') }}"
                         alt="MHacks Facebook, https://www.facebook.com/MHacksHackathon"/></a>
@@ -163,7 +163,7 @@
                                 <li class="question">I didn’t find my question here...</li>
                                 <li class="answer">
                                     If you’ve got something else on your mind, fire it off to <a
-                                        href="mailto:hackathon@umich.edu" target="_blank">hackathon@umich.edu</a>!
+                                        href="mailto:hackathon@umich.edu">hackathon@umich.edu</a>!
                                 </li>
                             </ul>
 
@@ -190,7 +190,7 @@
                                 <li class="answer">
                                     You and your intended teammates should all apply individually. But if you get an
                                     invitation and some of your teammates don’t, shoot us an email at <a
-                                        href="mailto:hackathon@umich.edu" target="_blank">hackathon@umich.edu</a> and
+                                        href="mailto:hackathon@umich.edu">hackathon@umich.edu</a> and
                                     we’ll
                                     try to sort
                                     things out.
@@ -235,7 +235,7 @@
                                     There’ll be tons of cool hardware for you to hack on! We’ll put out a list closer to
                                     the
                                     event so you can see what’s available. You can also feel free to bring your own from
-                                    home or <a href="mailto:hackathon@umich.edu" target="_blank">email us</a> with any
+                                    home or <a href="mailto:hackathon@umich.edu">email us</a> with any
                                     suggestions!
                                 </li>
                             </ul>
@@ -272,8 +272,7 @@
                                     website
                                     to make sure you meet the requirements and get started on the process if you haven’t
                                     already. If you need anything from the organizers, such as a letter of invitation,
-                                    please contact us as soon as possible at <a href="mailto:hackathon@umich.edu"
-                                                                                target="_blank">hackathon@umich.edu</a>.
+                                    please contact us as soon as possible at <a href="mailto:hackathon@umich.edu">hackathon@umich.edu</a>.
                                 </li>
                                 <li class="question">Will you be offering travel reimbursements?</li>
                                 <li class="answer">
@@ -314,7 +313,7 @@
                                 <li class="question">Help! I don’t want to hack, I want to ________!</li>
                                 <li class="answer">
                                     If you’re contemplating judging, volunteering, or mentoring, shoot us an email at <a
-                                        href="mailto:hackathon@umich.edu" target="_blank">hackathon@umich.edu</a>. If
+                                        href="mailto:hackathon@umich.edu">hackathon@umich.edu</a>. If
                                     your
                                     company is
                                     interested in becoming a sponsor, check out the sponsorship tile.
@@ -391,7 +390,7 @@
                 </div>
             </div>
             <div class="grid-item lightBlue " data-remove="0" data-expandable="0">
-                <div class="grid-item-image social-link">
+                <div class="grid-item-image clickable-icon">
                             <a href="https://twitter.com/mhacks" target="_blank"><img
                                     src="{{ static('assets/twitter-link.png') }}"
                                     alt="MHacks Twitter, https://twitter.com/mhacks"/></a>
@@ -418,8 +417,10 @@
                 <div class="grid-item-content">
                 </div>
             </div>
-            <div class="grid-item lightBlue" data-remove="2" data-expandable="0">
-                <div class="grid-item-content">
+            <div class="grid-item lightBlue" data-remove="0" data-expandable="0">
+                <div class="grid-item-image clickable-icon">
+                    <h3>In Partnership With</h3>
+                    <a href="https://mlh.io/" target="_blank"><img id="mlh-logo" src="{{ static('assets/mlh.png') }}" alt="Major League Hacking" ></a>
                 </div>
             </div>
             <div class="grid-item lightTurquoise" data-remove="2" data-expandable="0">
@@ -449,7 +450,7 @@
                         promote brand awareness, or get feedback on a product or API, we’ll provide the tools you need to make
                         the most out of your experience.</p>
                     <p>Interested in sponsoring? Want more information? Shoot us an email at
-                       <a href="mailto:sponsor-mhacks@umich.edu" target="_blank">sponsor-mhacks@umich.edu</a>
+                       <a href="mailto:sponsor-mhacks@umich.edu">sponsor-mhacks@umich.edu</a>
                        <br/><br/>We have an awesome lineup of sponsors for you.<br/>Check back soon for company logos.
                     </p>
                 </div>
