--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -36,14 +36,13 @@ h2 {
 
 h3 {
     font-family: 'Ubuntu';
-    font-size: 18pt;
+    font-size: 11pt;
     text-shadow: 0px 0px 50px rgba(0, 0, 0, 0.3);
     letter-spacing: 0.4px;
-    font-weight: 400;
-    padding-top: 20px;
-    padding-left: 7px;
-    margin-top: 0;
-    margin-bottom: 0;
+    font-weight: bolder;
+    color: white;
+    padding: 0;
+    margin: 0 0 3px 0;
 }
 
 p {
@@ -420,6 +419,11 @@ p {
 
 /* --- Grid Item Content --- */
 
+.grid-item:hover h1, .grid-item:hover h3 {
+    color: #0093B1 !important;
+    transition: color 0.2s;
+}
+
 .basic-info h1 {
     /* Style as h2 */
     font-family: 'Ubuntu';
@@ -513,16 +517,17 @@ p {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow: hidden;
 }
 
-.social-link {
+.clickable-icon {
     transition: background-color 0.2s;
 }
 
-.grid-item:hover .social-link {
+.grid-item:hover .clickable-icon {
     background-color: #FFE641;
     transition: background-color 0.2s;
 }
@@ -538,6 +543,11 @@ p {
     max-height: 90%;
     max-width: 90%;
     opacity: 0.6;
+}
+
+#mlh-logo {
+    max-width: 90%;
+    max-height: 100px;
 }
 
 /* --- FAQ Tile Content --- */
