--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,33 +2,10 @@
 
 {% block headers %}
     <link rel="stylesheet" media="all" href="{{ static('stylesheets/form.css') }}">
-
 {% endblock %}
 
 {% block content %}
-    <div class="header turquoise header-form">
-        <div id="eventInfo">
-            <h2>October 7-9</h2>
-            <p>Detroit Masonic Temple</p>
-        </div>
-        <div id="logo">
-            <img id="logoM" src="{{ static('assets/logo-m.png') }}" alt="MHacks 8 Logo - M">
-            <img id="logoText" src="{{ static('assets/logo-text.png') }}" alt="MHacks 8 Logo - Hacks 8">
-        </div>
-        <div id="headerButtons">
-            <form method="POST" action="{{ url_for('mhacks-logout') }}">
-                {{ csrf_input }}
-                <button type="submit">Logout</button>
-            </form>
-            <form method="GET" action="{{ url_for('mhacks-apply') }}">
-                {{ csrf_input }}
-                <button type="submit">Apply</button>
-            </form>
-        </div>
-        <div id="headerDropdown">
-
-        </div>
-    </div>
+    {% include 'header.html' %}
 
     <div class="container container-form">
         <div class="col-12 text-center title-form">
