--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block headers %}
-    <link rel="stylesheet" media="all" href="{{ static('stylesheets/main.css') }}">
+    <link rel="stylesheet" media="all" href="{{ static('stylesheets/index.css') }}">
 {% endblock %}
 
 {% block content %}
