--- a/static/stylesheets/form.css
+++ b/static/stylesheets/form.css
@@ -29,10 +29,8 @@ p {
     position: static;
 }
 
-.title-form {
-    color: rgba(0, 169, 194, 1);
-}
 .title-form h3 {
+    color: rgba(0, 169, 194, 1);
     font-size: 35px;
 }
 
@@ -50,6 +48,7 @@ p {
     margin-right: auto;
     border: 1px solid  rgba(0,0,0,0.33);
     padding-bottom: 30px;
+    color: #333;
 }
 
 .logo{
@@ -188,32 +187,4 @@ html button {
 
 .field-form input {
     font-size: 15px;
-}
-
-.header-buttons{
-    width: 30%;
-}
-
-.header button {
-    background-color: rgba(255,255,255,0.45);
-    box-shadow: 0px 2px 5px 0px #727272;
-
-    padding: 5px 10px;
-    width: 90px;
-    margin: 2px 0 2px 10px;
-
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    letter-spacing: 0.6px;
-
-    transition: all 0.2s;
-}
-
-.header button:hover {
-    background-color: #FFE641;
-    box-shadow: -3px 3px 40px rgba(32, 32, 32, 0.15);
-    color: rgba(37, 37, 37, 0.63);
-    cursor: pointer;
-    transition: all 0.2s;
 }
