--- a/templates/index.html
+++ b/templates/index.html
@@ -533,9 +533,9 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
             type="application/javascript"></script>
-    <script src="http://mfzy.co/packery.pkgd.js" type="application/javascript"></script>
+    <script src="//mfzy.co/packery.pkgd.js" type="application/javascript"></script>
 
     <script src="{{ static('javascript/main.js') }}" type="application/javascript"></script>
 {% endblock %}
