--- a/templates/index.html
+++ b/templates/index.html
@@ -535,7 +535,8 @@
 {% block scripts %}
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
             type="application/javascript"></script>
-    <script src="//mfzy.co/packery.pkgd.js" type="application/javascript"></script>
+{#    <script src="//mfzy.co/packery.pkgd.js" type="application/javascript"></script>#}
+    <script src="{{ static('javascript/packery.pkgd.min.js') }}" type="application/javascript"></script>
 
     <script src="{{ static('javascript/main.js') }}" type="application/javascript"></script>
 {% endblock %}
