Fix company capitalization

--- a/templates/apply.html
+++ b/templates/apply.html
@@ -163,7 +163,7 @@
     </div>
     <div class="row three">
         <div class="col-lg-6 ">
-            <input placeholder="Github" value="" id="github" name="github" type="text" class="form-control input-md" required="">
+            <input placeholder="GitHub" value="" id="github" name="github" type="text" class="form-control input-md" required="">
         </div>
         <div class="col-lg-6 ">
             <input placeholder="LinkedIn" value="" id="linkedin" name="linkedin" type="text" class="form-control input-md" required="">
@@ -171,7 +171,7 @@
     </div>
     <div class="row">
         <div class="col-lg-6 ">
-            <input placeholder="DevPost" value="" id="devpost" name="devpost" type="text" class="form-control input-md" required="">
+            <input placeholder="Devpost" value="" id="devpost" name="devpost" type="text" class="form-control input-md" required="">
         </div>
         <div class="col-lg-6 ">
             <input placeholder="Personal Website" value="" id="personalwebsite" name="personalwebsite" type="text" class="form-control input-md" required="">
