--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,10 @@
 
     <script src="//use.fontawesome.com/d6026c81cc.js"></script>
 
+    <!-- Open Graph Tags -->
+    <meta property="og:description" content="2,000 hackers will gather from around the world, and we’ll provide you with everything you need to be as curious, productive, and passionate as you can be. Whether it’s your first time hacking or your eighth, MHacks is a weekend experience you won’t want to miss." />
+    <meta property="og:title" content="MHacks 8" />
+    <meta property="og:image" content="{{ static('assets/logo.png') }}" />
     {% block headers %}
     {% endblock %}
 
