--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -1,4 +1,4 @@
-/* --- Elements --- */
+/* Elements */
 
 * {
     box-sizing: border-box;
@@ -79,6 +79,10 @@ p {
     margin-left: 0px;
     width: 100%;
     position: absolute;
+}
+
+.center {
+    text-align: center;
 }
 
 .center-col {
@@ -893,5 +897,4 @@ html fieldset {
     margin: 0;
     padding: 0;
     overflow-x:hidden;
-    height: 100vh;
 }
