--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 	<link href="//fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
 	<link href="//fonts.googleapis.com/css?family=Lora:400,400italic|Open+Sans|Roboto|Source+Sans+Pro" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" media="all" href="{{ static('stylesheets/main.css') }}">
+    <link rel="stylesheet" media="all" href="{{ static('stylesheets/base.css') }}">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
     type="application/javascript"></script>
