--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,34 +1,26 @@
-{% extends 'base.html' %}
+{% extends 'basic_page.html' %}
 
-{% block headers %}
-    <link rel="stylesheet" media="all" href="{{ static('stylesheets/form.css') }}">
-{% endblock %}
+{% block basic_page_title %}Dashboard{% endblock %}
+{% block pagetitle %}MHacks Dashboard{% endblock %}
 
-{% block content %}
-    {% include 'header.html' %}
-
-    <div class="container container-form">
-        <div class="col-12 text-center title-form">
-            <h3 class="first head"><span>Dashboard</span></h3>
+{% block basic_page_content %}
+    {% if request.user|belongs_to(groups.APP_READER) %}
+        <div style="text-align:center; padding-bottom:0;" class="section container">
+            <h3>Looks like you're someone special ;)</h3>
+            <h3>Head here to read applications:</h3>
+            <a href=""><button type="button">Read Apps</button></a> {# TODO: Fill URL #}
         </div>
-        {% if request.user|belongs_to(groups.APP_READER) %}
-            <div style="text-align:center; padding-bottom:0;" class="section container">
-                <h3>Looks like you're someone special ;)</h3>
-                <h3>Head here to read applications:</h3>
-                <a href=""><button type="button">Read Apps</button></a> {# TODO: Fill URL #}
-            </div>
+    {% endif %}
+    {% if request.user|belongs_to(groups.SPONSOR) %}
+        {# TODO: Show sponsor related information here #}
+    {% endif %}
+    {% if request.user|belongs_to(groups.STATS) %}
+        {# TODO: Show stats link and filter links here, i.e. admins who can view stats pages #}
+    {% endif %}
+    {% if request.user|belongs_to(groups.HACKER) %}
+        {% if request.user.application is defined and request.user.application.submitted %}
+            <h3 style="text-align: center;">Thank you for submitting your application!</h3>
+        {% else %}
         {% endif %}
-        {% if request.user|belongs_to(groups.SPONSOR) %}
-            {# TODO: Show sponsor related information here #}
-        {% endif %}
-        {% if request.user|belongs_to(groups.STATS) %}
-            {# TODO: Show stats link and filter links here, i.e. admins who can view stats pages #}
-        {% endif %}
-        {% if request.user|belongs_to(groups.HACKER) %}
-            {% if request.user.application is defined and request.user.application.submitted %}
-                <h3 style="text-align: center;">Thank you for submitting your application!</h3>
-            {% else %}
-            {% endif %}
-        {% endif %}
-    </div>
+    {% endif %}
 {% endblock %}
